--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,53 @@
+@media all and (min-width:768px) {
+    /* Tablet styles here */
+	.bottom-section {
+		justify-content: space-between;
+    	align-items: flex-start;
+    	border-top: 1px solid #eee;
+		
+
+	}
+	.section-one,
+	.section-two,
+	.section-three {
+	
+		border-top: none;
+    	flex-basis: 30%;
+	}
+
+	.section-two {
+		border-left: 1px solid #eee;
+    	border-right: 1px solid #eee;
+    	padding: 0 20px;
+}
+	
+ 
+}
+
+@media all and (min-width:1200px) {
+    /* Desktop styles here */
+	header {
+		justify-content: space-between; 
+}
+	header h1 {
+		width: 30%;
+		padding: 0;
+		border-bottom: none;
+		text-align: left; 
+} 
+	header nav ul {
+    	display: flex;
+    	justify-content: space-between; 
+}
+	heaader nav {
+		width: 40%; 
+ }	
+}
+
+
+
+
+
 html {
     font-size:16px;
 }
@@ -10,7 +60,7 @@ body {
   	justify-content: center;
   	align-items: center;
 	font-size:1em;
-	flex-flow: row wrap; 
+	 
 }
 
 .container{
@@ -19,7 +69,6 @@ body {
 	display: flex;
   	justify-content: center;
   	align-items: center;
-	margin: 0 auto;
 	flex-flow: row wrap; 
 	
 }
@@ -46,11 +95,15 @@ p {
 	line-height: 21px;
     padding: 0 30px;
 }
+ul {
+	margin: 0;
+}
 
 /*The widths are in a percentage!*/
 header {
+	text-align: center;
 	display: flex;
-  	justify-content: center;
+  	width: 100%; 
   	align-items: center;
 	border-bottom: 3px solid #77a466;
 	margin: 0 auto;
@@ -92,8 +145,6 @@ header nav ul li a{
 	display: flex;
   	justify-content: center;
   	align-items: center;
-	margin: 0 auto;
-	clear: both;
 	flex-flow: row wrap; 
 }
 
@@ -107,7 +158,7 @@ header nav ul li a{
 }
 
 .main-title {
-	
+	-ro-
 	
 }
 .main-title h2 {
@@ -124,25 +175,15 @@ header nav ul li a{
 .section-one,
 .section-two,
 .section-three {
-	width: 33%;
+		
 	
-	float: left;
 	border-top: 1px solid #eee;
+	width: 100%;
 }
 
-.section-one h3 {
-	padding: 10px 0;
-}
 
-.section-two {
-	border-left: 1px solid #eee;
-	border-right: 1px solid #eee;
-}
 
-.section-two h3,
-.section-three h3 {
-	padding: 10px 30px;
-}
+
 
 .menu {
 	list-style: none;
@@ -166,14 +207,13 @@ header nav ul li a{
 
 /*The widths are in a percentage!*/
 footer {
-	display: flex;
-  	justify-content: center;
-  	align-items: center;
 	border-top: 3px solid #eee;
-	margin: 0 auto;
-	clear: both;
-	text-align: center;
-	flex-flow: row wrap; 
+    text-align: center;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
 }
 footer span {
 	font-family: 'Galada', cursive;
