--- a/css/main.css
+++ b/css/main.css
@@ -1,66 +1,16 @@
-@media all and (min-width:768px) {
-    /* Tablet styles here */
-	.bottom-section {
-		justify-content: space-between;
-    	align-items: flex-start;
-    	border-top: 1px solid #eee;
-		
-
-	}
-	.section-one,
-	.section-two,
-	.section-three {
-	
-		border-top: none;
-    	flex-basis: 30%;
-	}
-
-	.section-two {
-		border-left: 1px solid #eee;
-    	border-right: 1px solid #eee;
-    	padding: 0 20px;
-}
-	
- 
-}
-
-@media all and (min-width:1200px) {
-    /* Desktop styles here */
-	header {
-		justify-content: space-between; 
-}
-	header h1 {
-		width: 30%;
-		padding: 0;
-		border-bottom: none;
-		text-align: left; 
-} 
-	header nav ul {
-    	display: flex;
-    	justify-content: space-between; 
-}
-	heaader nav {
-		width: 40%; 
- }	
-}
-
-
-
 
 
 html {
     font-size:16px;
-}
-
-
+};
 
 body {
 	font-family: 'Montserrat', Helvetica, Arial, sans-serif;
 	display: flex;
   	justify-content: center;
   	align-items: center;
-	font-size:1em;
-	 
+	font-size:1em; 
+	margin: auto;
 }
 
 .container{
@@ -70,7 +20,7 @@ body {
   	justify-content: center;
   	align-items: center;
 	flex-flow: row wrap; 
-	
+	margin: auto; 
 }
 
 h1,
@@ -79,6 +29,7 @@ h3 {
 	color: black;
 	text-transform: uppercase;
 	font-weight: 700;
+	
 }
 h1 {
 	font-size: 1.875em;
@@ -93,7 +44,7 @@ h3 {
 p {
 	font-size: 0.875em;
 	line-height: 21px;
-    padding: 0 30px;
+    
 }
 ul {
 	margin: 0;
@@ -105,15 +56,18 @@ header {
 	display: flex;
   	width: 100%; 
   	align-items: center;
+	justify-content: center;
 	border-bottom: 3px solid #77a466;
-	margin: 0 auto;
+	
 	flex-flow: row wrap; 
 }
 
 header h1 {
-	
+	padding: 38px 20px 20px 20px; 
 	margin: 0;
 	padding: 38px 0;
+	border-bottom: 3px solid #77a466; 
+	width: 100%; 
 }
 header h1 span {
 	color: #77a466;
@@ -122,17 +76,19 @@ header h1 span {
 header nav {
 	
 	padding: 46px 0;
+	width: 100%;
 }
 header nav ul {
 	margin: 0;
 	padding: 0;
 }
 header nav ul li {
+	list-style: none; 
 	text-transform: uppercase;
 	font-weight: 700;
 	font-size: 0.875em;
-	padding: 0 10px;
-	display: inline;
+	padding: 10px 0;
+	
 }
 header nav ul li a{
 	text-decoration: none;
@@ -148,19 +104,13 @@ header nav ul li a{
 	flex-flow: row wrap; 
 }
 
-.main-image {
-	height: auto;
-	
-}
+
 .main-image img {
 	width: 100%;
 	border-bottom: 3px solid #77a466;
 }
 
-.main-title {
-	-ro-
-	
-}
+
 .main-title h2 {
 	text-align: left;
 	padding: 5px 0;
@@ -175,14 +125,8 @@ header nav ul li a{
 .section-one,
 .section-two,
 .section-three {
-		
-	
-	border-top: 1px solid #eee;
 	width: 100%;
 }
-
-
-
 
 
 .menu {
@@ -221,3 +165,52 @@ footer span {
 	color: #77a466;
 	font-size: 0.875em;
 }
+
+
+
+@media all and (min-width:768px) {
+    /* Tablet styles here */
+	.bottom-section {
+		justify-content: space-between;
+    	align-items: flex-start;
+    	border-top: 1px solid #eee;
+		
+
+	}
+	.section-one,
+	.section-two,
+	.section-three {
+	
+		border-top: none; 
+    	flex-basis: 30%;
+	}
+
+	.section-two {
+		border-left: 1px solid #eee;
+    	border-right: 1px solid #eee;
+    	padding: 0 20px;
+}
+	
+ 
+}
+
+@media all and (min-width:1200px) {
+    /* Desktop styles here */
+	header {
+		justify-content: space-between; 
+}
+	header h1 {
+		width: 30%;
+		padding: 0;
+		border-bottom: none;
+		text-align: left; 
+} 
+	header nav ul {
+    	display: flex;
+    	justify-content: space-between; 
+}
+	header nav {
+		width: 40%; 
+ }	
+}
+
